# mixed-state-phases

./: .gitignore  README.md
CliffordSimulation/: README.md  pyproject.toml  requirements.txt
CliffordSimulation/analysis/decaytime/: README.md  analyze_data.ipynb  data_io.py
CliffordSimulation/analysis/defect/: defect-rotated.ipynb  defect.ipynb
CliffordSimulation/analysis/mipt/: README.md  analyze_data.ipynb  data_io.py
CliffordSimulation/analysis/mixingtime/: README.md  data_io.py
CliffordSimulation/analysis/mixingtime2.0/: README.md  analyze_data.ipynb  data_io.py
CliffordSimulation/analysis/twocopy/: README.md  analyze_data.ipynb  data_io.py  run_simulation.py
CliffordSimulation/simulation/: __init__.py  heatmap.py  run_simulation.py  symmetric_clifford.py
MPS/: DMRG_and_correlators.ipynb  common_functions.jl  paper.ipynb  scaling_collapse.ipynb
MPS/data/saved_MPS/: paper_projected_hamiltonian_ZZ100, 0.05.h5  paper_projected_hamiltonian_ZZ100, 0.1.h5  paper_projected_lind_ZZ100, 0.05.h5  paper_projected_lind_ZZ100, 0.1.h5  paper_projected_lind_mp100, 0.05.h5  paper_projected_lind_mp100, 0.1.h5  paper_unprojected_lambda400, 0.0.h5  paper_unprojected_lambda400, 0.1.h5  paper_unprojected_lambda400, 0.2.h5  paper_unprojected_lambda400, 0.3.h5  paper_unprojected_lambda400, 0.4.h5  paper_unprojected_lambda400, 0.5.h5  paper_unprojected_lambda400, 0.6.h5  paper_unprojected_lambda400, 0.7.h5  paper_unprojected_lambda400, 0.8.h5  paper_unprojected_lambda400, 0.9.h5  paper_unprojected_lambda400, 1.0.h5  unperturbed_32.h5
(+45 files in other folders)
