[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["simulation"]

[project]
name = "simulation"
requires-python = ">=3.8"
dependencies = ["numpy", "stim", "matplotlib"]
version = "0.0.0"

[project.urls]
"Source" = "https://github.com/jtiosue/OpenTO"